# cookiecutter-base-repo

./: README.md  cookiecutter.json
{{cookiecutter.directory_name}}/: .pre-commit-config.yaml  README.md
{{cookiecutter.directory_name}}/.github/workflows/: lint-and-test.yml
{{cookiecutter.directory_name}}/src/app/: logging_config.py  main.py
{{cookiecutter.project_name}}/: README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_name}}/resources/: logging_config.json
{{cookiecutter.project_slug}}/: Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/docs/: app.md  configuration.md  deployment.md  index.md
{{cookiecutter.project_slug}}/src/app/: __init__.py
