[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name="Antonio Rodríguez", email="antonio.rodriguez@holdingsinsud.com" },
    { name="Paula Encinar", email="paula.encinar@holdingsinsud.com" }
]
requires-python = ">=3.12"

dependencies = [
    "openai==1.64.0",
    "python-dotenv==1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
main = "app.main:main"

[tool.uv]
dev-dependencies = [
  "pre-commit==3.8.0",
  "pytest==8.3.2",
  "mypy==1.13.0"
]

[tool.ruff]
line-length = 119
extend-exclude = [".venv"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "UP",
  "B",
  "SIM",
  "I",
  "ASYNC"
]

[tool.ruff.lint.pydocstyle]
convention = "google"
